syntax = "proto3";

package yandex.cloud.priv.vdi.v1.api;

import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/vdi/v1/api/desktop_image.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/vdi/v1/api;vdi";
option java_outer_classname = "PADIS";

service DesktopImageService {

    rpc List (ListDesktopImagesRequest) returns (ListDesktopImagesResponse);
}

message ListDesktopImagesRequest {
    string folder_id = 1 [(required) = true, (length) = "<=50"];

    int64 page_size = 21 [(value) = "0-1000"];
    string page_token = 22 [(length) = "<=100"];
    string filter = 23 [(length) = "<=1000"];
    string order_by = 24 [(length) = "<=100"];
}

message ListDesktopImagesResponse {
    repeated DesktopImage desktop_images = 1;

    string next_page_token = 22;
}
